--- a/apputveckling/src/main/webapp/views/client/tempAppointment.xhtml
+++ b/apputveckling/src/main/webapp/views/client/tempAppointment.xhtml
@@ -1,33 +1,67 @@
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+
+<h:head>
+    <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/assets/client.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="https://www.google.com/jsapi"> </script><!-- Google Charts -->
+    <script src="#{request.contextPath}/resources/js/statistics.js" type=""> </script>
+    <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
+</h:head>
 <div xmlns="http://www.w3.org/1999/xhtml"
      xmlns:h="http://xmlns.jcp.org/jsf/html"
-     xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+     xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core"
+     xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <h:head>
         <title>Schemaläggning</title>
     </h:head>
     <h:body>
-        <div class="container-fluid row">
-            <div class="col-12">
+        <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
+        <div class="container-fluid row" style="height: 60%; position: relative; margin: 10rem auto">
+            <div class="col-md-3 order-first">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="font-bold">Boka tid</h3>
+                    </div>
+                    <div class="card-body">
+                        <p:outputLabel value="Vänligen välj en tid för mötet!" styleClass="font-bold"/>
+                        <p:outputLabel value="Mötet är 45 minuter långt." styleClass="font-bold"/>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9 order-last">
                 <h:form>
                     <p:growl id="messages" showDetail="true" escape="false" noOpener="false"/>
-                    <p:schedule id="schedule" value="#{clientEventEntityBean.model}" widgetVar="myschedule" view="timeGridDay" tooltip="true" resizable="false"
-                                disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true" urlTarget="false" dir="true">
-                        <p:ajax event="eventSelect" listener="#{clientEventEntityBean.onEventSelect}" update="eventDetails"
+                    <p:schedule id="schedule" value="#{clientEventEntityBean.model}" widgetVar="myschedule" styleClass="font-bold pointer-event"
+                                view="listWeek" tooltip="true" resizable="false" draggable="false"
+                                disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true"
+                                urlTarget="false" dir="true">
+                        <p:ajax event="eventSelect" listener="#{clientEventEntityBean.onEventSelect}"
+                                update="eventDetails"
                                 oncomplete="PF('eventDialog').show();"/>
                     </p:schedule>
 
-                    <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
+
+                    <p:dialog widgetVar="eventDialog" header="Bokningsdetaljer" showEffect="fade" hideEffect="fade" >
+                        <p  class="font-bold"> Mötet är 45 minuter långt</p>
                         <h:panelGrid id="eventDetails" columns="2" cellpadding="3">
+
                             <p:outputLabel for="title" value="Namn" styleClass="font-bold"/>
-                            <p:inputText id="title" value="#{clientEventEntityBean.event.title}" inputmode="" required="true" />
+                            <p:selectOneMenu id="title" value="#{clientEventEntityBean.event.title}" required="true">
+                                <f:selectItem itemLabel="Reparation" itemValue="Reparation"/>
+                                <f:selectItem itemLabel="Reservation" itemValue="Reservation"/>
+                                <f:selectItem itemLabel="Övrigt" itemValue="Övrigt"/>
+                            </p:selectOneMenu>
 
-                            <p:outputLabel for="from" value="From" styleClass="font-bold"/>
-                            <p:datePicker id="from" value="#{clientEventEntityBean.event.startDate}" pattern="yyyy/MM/dd" timeInput="true"
-                                          showTime="true" appendTo="@(body)" disabled="true"/>
 
-                            <p:outputLabel for="to" value="To" styleClass="font-bold"/>
-                            <p:datePicker id="to" value="#{clientEventEntityBean.event.endDate}" pattern="yyyy/MM/dd" timeInput="true" disabled="true"
-                                          showTime="true" appendTo="@(body)"/>
 
                             <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
                             <p:inputText id="email" value="#{clientEventEntityBean.email}" required="true"/>
@@ -36,7 +70,8 @@
                             <p:inputText id="url" value="#{clientEventEntityBean.event.url}"/>
 
                             <p:outputLabel for="description" value="Description" styleClass="font-bold"/>
-                            <p:inputTextarea id="description" value="#{clientEventEntityBean.event.description}" rows="3" cols="30"/>
+                            <p:inputTextarea id="description" value="#{clientEventEntityBean.event.description}"
+                                             rows="3" cols="30"/>
 
                         </h:panelGrid>
 
@@ -44,6 +79,7 @@
                             <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
                                              ignoreAutoUpdate="false"/>
                             <p:commandButton id="addButton" value="Save" action="#{clientEventEntityBean.addEvent()}"
+                                             update="messages"
                                              oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
 
                         </div>
@@ -51,5 +87,7 @@
                 </h:form>
             </div>
         </div>
+        <ui:include src="../../includes/client_inc/footer.xhtml"/>
     </h:body>
 </div>
+</html>
