--- a/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
@@ -1,138 +1,63 @@
-<div xmlns="http://www.w3.org/1999/xhtml"
-     xmlns:h="http://xmlns.jcp.org/jsf/html"
-     xmlns:f="http://xmlns.jcp.org/jsf/core"
-     xmlns:p="http://primefaces.org/ui" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-
-    <h:head>
-        <title>Schemaläggning</title>
-    </h:head>
-    <script>
-        //<![CDATA[
-        function dateTemplateFunc(date) {
-            return '<span style="background-color:' + ((date.day < 21 && date.day > 10) ? '#81C784' : 'inherit') + ';border-radius:50%;width: 2.5rem;height: 2.5rem;line-height: 2.5rem;display: flex;align-items: center;justify-content: center;">' + date.day + '</span>';
-        }
-
-        //]]>
-    </script>
-    <h:body>
-        <h:form>
-            <div class="row">
-                <div class="field col-md-6">
-                    <p:growl id="messages" showDetail="true" escape="false"/>
-                    <h4>
-                        <p:outputLabel for="calendarClient" value="Select a date"/>
-                    </h4>
-                    <p:datePicker
-                            id="calendarClient" value="#{calendarApplication.date}"
-                            inline="false"
-                            showIcon="true"
-                            pattern="yyyy-MM-dd"
-                            disabledDays="${[6,7]}"
-                            showTime="false"
-                            disabledDates="${calendarApplication.invalidDates}">
-                        <p:ajax
-                                event="dateSelect" listener="#{calendarApplication.onDateSelect}"
-                                update="messages, calendarDateSelectHeader, appointmentTimes, appointmentLabels"/>
-                    </p:datePicker>
-                </div>
-                <div class="col-md-6">
-                    <div id="chooseAppointmentDiv">
-                        <h5>
-                            <h:outputText id="calendarDateSelectHeader" value="#{calendarApplication.headerDate}"/>
-                        </h5>
-                        <p:outputPanel id="appointmentLabels">
-                            <div class="row">
-                                <div class="col-6 text-left ps-4 ms-0">
-                                    <h:outputText value="Start Time"
-                                                  rendered="#{not empty calendarApplication.events}"/>
-                                </div>
-                                <div class="col-6 text-right ps-5 me-0">
-                                    <h:outputText value="End Time" rendered="#{not empty calendarApplication.events}"/>
-                                </div>
-                            </div>
-                            <h:outputText value="No available appointments"
-                                          rendered="#{empty calendarApplication.events}"/>
-                        </p:outputPanel>
-                        <p:panelGrid columns="1" layout="grid" styleClass="ui-grid ui-grid-responsive"
-                                     id="appointmentTimes">
-                            <ui:repeat value="#{calendarApplication.events}" var="event">
-                                <p:commandLink
-                                        styleClass="btn btn-primary text-white btn-block d-flex justify-content-between mt-1"
-                                        actionListener="#{eventEntityBean.setEvent(event)}"
-                                        onclick="PF('bookAppointmentDialog').show(); return false;"
-                                        update="bookAppointmentDialog">
-                                    <p:ajax event="click" listener="#{eventEntityBean.setEvent(event)}" update="bookAppointmentDialog"
-                                            oncomplete="PF('bookAppointmentDialog').show();"/>                                    <div>
-                                        <h:outputText value="#{event.start_date}">
-                                            <f:convertDateTime pattern="HH:mm" timeZone="GMT"/>
-                                        </h:outputText>
-                                    </div>
-                                    <div>
-                                        <h:outputText value="#{event.end_date}">
-                                            <f:convertDateTime pattern="HH:mm" timeZone="GMT"/>
-                                        </h:outputText>
-                                    </div>
-                                    <div>
-                                        <!-- Check if the event ID is not null or empty before displaying it -->
-                                        <h:outputText value="#{not empty event.id ? event.id : 'N/A'}"/>
-                                    </div>
-                                </p:commandLink>
-
-
-                            </ui:repeat>
-
-                        </p:panelGrid>
-                    </div>
-                </div>
+<div class="container-fluid row" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+     style="height: 60%; position: relative; margin: 10rem auto" xmlns:p="http://primefaces.org/ui">
+    <div class="col-md-3 order-first">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="font-bold">Boka tid</h3>
             </div>
+            <div class="card-body">
+                <p:outputLabel value="Vänligen välj en tid för mötet!" styleClass="font-bold"/>
+                <p:outputLabel value="Mötet är 45 minuter långt." styleClass="font-bold"/>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-9 order-last">
+        <h:form>
+            <p:growl id="messages" showDetail="true" escape="false" noOpener="false"/>
+            <p:schedule id="schedule" value="#{clientEventEntityBean.model}" widgetVar="myschedule" styleClass="font-bold pointer-event"
+                        view="listWeek" tooltip="true" resizable="false" draggable="false"
+                        disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true"
+                        urlTarget="false" dir="true">
+                <p:ajax event="eventSelect" listener="#{clientEventEntityBean.onEventSelect}"
+                        update="eventDetails"
+                        oncomplete="PF('eventDialog').show();"/>
+            </p:schedule>
 
 
-        </h:form>
-        <!-- Dialog -->
-        <p:dialog header="Book Appointment" widgetVar="bookAppointmentDialog" id="bookAppointmentDialog" modal="true" closeOnEscape="true">
-            <h:panelGrid columns="1">
-                <!-- Display the id -->
-                <h:outputLabel for="id" value="ID:"/>
-                <div>
-                    <!-- Check if the event ID is not null or empty before displaying it -->
-                    <h:outputText value="#{not empty event.id ? event.id : 'N/A'}"/>
+            <p:dialog widgetVar="eventDialog" header="Bokningsdetaljer" showEffect="fade" hideEffect="fade" >
+                <p  class="font-bold"> Mötet är 45 minuter långt</p>
+                <h:panelGrid id="eventDetails" columns="2" cellpadding="3">
+
+                    <p:outputLabel for="title" value="Namn" styleClass="font-bold"/>
+                    <p:selectOneMenu id="title" value="#{clientEventEntityBean.event.title}" required="true">
+                        <f:selectItem itemLabel="Reparation" itemValue="Reparation"/>
+                        <f:selectItem itemLabel="Reservation" itemValue="Reservation"/>
+                        <f:selectItem itemLabel="Övrigt" itemValue="Övrigt"/>
+                    </p:selectOneMenu>
+
+
+
+                    <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
+                    <p:inputText id="email" value="#{clientEventEntityBean.email}" required="true"/>
+
+                    <p:outputLabel for="url" value="URL" styleClass="font-bold"/>
+                    <p:inputText id="url" value="#{clientEventEntityBean.event.url}"/>
+
+                    <p:outputLabel for="description" value="Description" styleClass="font-bold"/>
+                    <p:inputTextarea id="description" value="#{clientEventEntityBean.event.description}"
+                                     rows="3" cols="30"/>
+
+                </h:panelGrid>
+
+                <div class="flex justify-content-between mt-3">
+                    <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
+                                     ignoreAutoUpdate="false"/>
+                    <p:commandButton id="addButton" value="Save" action="#{clientEventEntityBean.addEvent()}"
+                                     update="messages"
+                                     oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
+
                 </div>
-                <h:outputText id="id" value="#{eventEntityBean.event.id}"/>
-
-                <!-- Display the start date time -->
-                <h:outputLabel for="start_date" value="Start Date Time:"/>
-                <h:outputText id="start_date" value="#{eventEntityBean.event.startDate}">
-                    <f:convertDateTime pattern="yyyy-MM-dd HH:mm" timeZone="GMT"/>
-                </h:outputText>
-
-                <!-- Display the end date time -->
-                <h:outputLabel for="end_date" value="End Date Time:"/>
-                <h:outputText id="end_date" value="#{eventEntityBean.event.endDate}">
-                    <f:convertDateTime pattern="yyyy-MM-dd HH:mm" timeZone="GMT"/>
-                </h:outputText>
-                <!-- Dropdown for type -->
-                <h:outputLabel for="type" value="Type:"/>
-                <p:selectOneMenu id="type" value="#{eventEntityBean.event.title}">
-                    <f:selectItem itemLabel="Reparation" itemValue="Reparation"/>
-                    <f:selectItem itemLabel="Reservation" itemValue="Reservation"/>
-                </p:selectOneMenu>
-
-                <!-- Input for url -->
-                <h:outputLabel for="url" value="URL:"/>
-                <p:inputText id="url" value="#{eventEntityBean.event.url}"/>
-
-                <!-- Input for email -->
-                <h:outputLabel for="email" value="Email:"/>
-                <p:inputText id="email" value="#{eventEntityBean.email}"/>
-
-                <!-- Input for description -->
-                <h:outputLabel for="description" value="Description:"/>
-                <p:inputText id="description" value="#{eventEntityBean.event.description}"/>
-            </h:panelGrid>
-
-            <!-- Button to submit the form -->
-            <p:commandButton value="Submit" action="#{eventEntityBean.updateEventEntity}"
-                             oncomplete="PF('bookAppointmentDialog').hide()"/>
-        </p:dialog>
-    </h:body>
+            </p:dialog>
+        </h:form>
+    </div>
 </div>
