--- a/apputveckling/src/main/webapp/views/client/inloggadhome.xhtml
+++ b/apputveckling/src/main/webapp/views/client/inloggadhome.xhtml
@@ -5,7 +5,6 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
 <h:head>
     <title>My Application</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
@@ -17,21 +16,13 @@
     <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
 </h:head>
 <h:body>
-    <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
-    <div class="container" style="margin: 20%">
-        <h:outputLabel value="My cases:"/>
-        #{signup.IfNameNotExists()}
+    <ui:include src="../../includes/client_inc/inloggad_nav_client.xhtml"/>
+    <div class="" id="HomeClient" style="margin-top: 130px">
+        <ui:include src="../../includes/client_inc/autoplayingSlide.xhtml"/>
+        <ui:include src="../../includes/client_inc/clientHomeContent.xhtml"/>
 
-        <p> hej #{signup.name}</p>
-        <div style="height: 100%" align="left">
-            <h:outputText/>
-            Description for case:
-            <br/>
-            #{signup.description}
-        </div>
+        <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
     </div>
-
-
     <ui:include src="../../includes/client_inc/footer.xhtml"/>
 </h:body>
 </html>
