--- a/apputveckling/src/main/webapp/includes/clients.xhtml
+++ b/apputveckling/src/main/webapp/includes/clients.xhtml
@@ -20,7 +20,7 @@
         <div class="row">
 
             <div class="col">
-                <p class="card-text"><strong>ID: </strong></p>
+                <p class="card-text"><strong>Client ID: </strong></p>
             </div>
             <div class="col">
                 <p class="card-text"><strong>Name: </strong></p>
@@ -31,8 +31,9 @@
             </div>
 
             <div class="col">
-                <p class="card-text"><strong>Time: </strong></p>
+                <p class="card-text"><strong>Completed Date: </strong></p>
             </div>
+
 
         </div>
 
@@ -41,7 +42,7 @@
 
     <div class="card mt-3 history_list">
 
-        <ui:repeat value="#{clientBean.clientList}" var="client">
+        <ui:repeat value="#{clientBean.historyClientList}" var="client">
             <div class="row">
                 <div class="col">
                     <p class="card-text">#{client.clientId}</p>
@@ -52,13 +53,14 @@
                 </div>
 
                 <div class="col">
-                    <p class="card-text">#{clientBean.FindCase(client.clientId)} </p>
+                    #{clientBean.FindCase(client.clientId)}
+                    <p class="card-text"> #{clientBean.caseData.CASE_TYPE}</p>
                 </div>
 
                 <div class="col">
-                    <p class="card-text">#{client.clientDate}</p>
+                    #{clientBean.FindCase(client.clientId)}
+                    <p class="card-text"> #{clientBean.caseData.CASE_DATE_END}</p>
                 </div>
-
 
 
             </div>
@@ -81,8 +83,8 @@
     </h:form>
 
     <div class="list-group list-group-action test">
-
         <h:form>
+
             <ui:repeat value="#{clientBean.clientList}" var="client">
                 <h:commandLink action="#{clientBean.collectClientInfo(client.clientId)}" styleClass="list-group-item list-group-item-action">
                     <f:param name="clientId" value="#{client.clientId}" />
@@ -95,7 +97,7 @@
     </div>
 
     <h:form>
-        <p:commandButton styleClass="add_button m-3" value="Add New Client"  update=":addcilent"
+        <p:commandButton styleClass="add_button m-3" value="Add New Client" action="#{clientBean.newClient}" update=":addcilent"
                          oncomplete="PF('addcilent').show()"/>
 
     </h:form>
