--- a/apputveckling/src/main/webapp/views/admin_products.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_products.xhtml
@@ -13,7 +13,8 @@
                 template="/views/template.xhtml">
 
     <ui:define name="content">
-        <h1 style="text-align: center;margin-bottom: 30px;">"product list!"</h1>
+        <h1 style="text-align: center;margin-bottom: 30px;">Mina gitarrer</h1>
+        <ui:include src="../includes/updateForm.xhtml"/>
         <ui:include src="../includes/productContent.xhtml"/>
         <ui:include src="../includes/addForm.xhtml"/>
     </ui:define>
