add client_name attribute in the database table and in the event's input boxes fix database "not null" notations that changed the booking time to current time

--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -35,6 +35,9 @@
                         <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
                         <p:inputText id="email" value="#{eventEntityBean.email}"/>
 
+                        <p:outputLabel for="client_name" value="First and last name" styleClass="font-bold"/>
+                        <p:inputText id="client_name" value="#{clientEventEntityBean.client_name}"/>
+
                         <p:outputLabel for="url" value="URL" styleClass="font-bold"/>
                         <p:inputText id="url" value="#{eventEntityBean.event.url}"/>
 
