--- a/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
@@ -28,7 +28,7 @@
                 <p  class="font-bold"> Mötet är 45 minuter långt</p>
                 <h:panelGrid id="eventDetails" columns="2" cellpadding="3">
 
-                    <p:outputLabel for="title" value="Namn" styleClass="font-bold"/>
+                    <p:outputLabel for="title" value="Typ" styleClass="font-bold"/>
                     <p:selectOneMenu id="title" value="#{clientEventEntityBean.event.title}" required="true">
                         <f:selectItem itemLabel="Reparation" itemValue="Reparation"/>
                         <f:selectItem itemLabel="Reservation" itemValue="Reservation"/>
@@ -36,6 +36,9 @@
                     </p:selectOneMenu>
 
 
+
+                    <p:outputLabel for="client_name" value="First and Last name" styleClass="font-bold"/>
+                    <p:inputText id="client_name" value="#{clientEventEntityBean.client_name}" required="true"/>
 
                     <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
                     <p:inputText id="email" value="#{clientEventEntityBean.email}" required="true"/>
