blev lite problem med path när jag mergade min branch clientcases, har fixat några av problemen.

--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -21,7 +21,7 @@
             <h:form>
                 <h:commandButton action="/views/client/clientcase.xhtml"
                                  styleClass="#{navigationBean.selectedSection eq 'Reserve' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
-                                 value="My appointments"
+                                 value="Mina Ärenden"
                 />
             </h:form>
         </div>
