Changed member id to member_email in addCase function

--- a/apputveckling/src/main/webapp/includes/cassesContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/cassesContent.xhtml
@@ -210,8 +210,8 @@
             <h:inputTextarea id="description" value="#{casesBean.newCaseDesc}" placeholder="Description" />
             <label for="journalDesc">Journal Description:</label>
             <h:inputTextarea id="journalDesc" value="#{casesBean.newJournalDesc}" placeholder="Case Journal Description" />
-            <label for="Member_id">Member id:</label>
-            <h:inputTextarea id = "Member_id" value="#{casesBean.newMemberId}" placeholder = "Member_id"/>
+            <label for="Member_email">Member Email:</label>
+            <h:inputTextarea id = "Member_email" value="#{casesBean.newMemberEmail}" placeholder = "Member_Email"/>
             <h:commandButton value="Add" action="#{casesBean.addCase}" />
          </div>
       </h:form>
