--- a/apputveckling/src/main/webapp/includes/cassesContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/cassesContent.xhtml
@@ -89,6 +89,16 @@
       }
    </style>
    <script>
+      function checkMemberEmail() {
+         var memberEmail = document.getElementById('addCaseForm:Client_email').value;
+         var addButton = document.getElementById('addCaseForm:addButton');
+
+         if (memberEmail.trim() === "") {
+            addButton.disabled = true;
+         } else {
+            addButton.disabled = false;
+         }
+      }
       function toggleDescription(caseId) {
          var description = document.getElementById("description_" + caseId);
          var arrow = document.getElementById("arrow_" + caseId);
@@ -172,10 +182,9 @@
 <body>
 <div class="search-filter-container">
    <input type="text" id="search_bar" placeholder="Search id..." oninput="searchCase()"/>
-   <button class="filter-button" onclick="toggleFilterOptions()">Filter</button>
-   <button class="add-button" onclick="showAddCaseModal()">Add</button>
+   <button type="button" class="btn btn-primary" onclick="toggleFilterOptions()">Filter</button>
+   <button type="button" class="btn btn-primary" onclick="showAddCaseModal()">Add</button>
 </div>
-
 <div id="filterOptions" style="display: none;">
    <select id="status_filter" onchange="filterCase()">
       <option value="">All Status</option>
@@ -189,7 +198,6 @@
       <option value="Repairment">Reperment</option>
    </select>
 </div>
-
 <div id="addCaseModal" class="modal">
    <div class="modal-content">
       <span class="close" onclick="closeAddCaseModal()">&times;</span>
@@ -207,14 +215,15 @@
                <f:selectItem itemValue="Repairment" itemLabel="Repairment" />
             </h:selectOneMenu>
             <label for="Client_email">Member Email:</label>
-            <h:inputText id = "Client_email" value="#{casesBean.newMemberEmail}" placeholder = "Client_Email"/>
+            <h:inputText id="Client_email" value="#{casesBean.newMemberEmail}" placeholder="Client_Email" onchange="checkMemberEmail()" />
             <label for="description">Description:</label>
             <h:inputTextarea id="description" value="#{casesBean.newCaseDesc}" placeholder="Description" />
             <label for="journalDesc">Journal Description:</label>
             <h:inputTextarea id="journalDesc" value="#{casesBean.newJournalDesc}" placeholder="Case Journal Description" />
-            <h:commandButton value="Add" action="#{casesBean.addCase}" />
+            <h:commandButton id="addButton" styleClass="btn btn-primary" value="Add" action="#{casesBean.addCase}" disabled="true" />
          </div>
       </h:form>
+
    </div>
 </div>
 <c:forEach var="case" items="#{casesBean.cases}">
