case end date sets automatically when the user changes the case status to closed

--- a/apputveckling/src/main/webapp/includes/cassesContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/cassesContent.xhtml
@@ -245,6 +245,8 @@
          <br />
          Case Start Date: #{case.CASE_DATE_START}
          <br />
+         Case End Date: #{case.CASE_DATE_END}
+         <br />
          Case Hours: #{case.CASE_HOURS}h
          <br />
          Case Profit: #{case.CASE_PROFIT}kr
