--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -8,77 +8,88 @@
     <h:body>
         <div class="container-fluid row">
             <div class="col-md-9">
-            <h:form>
-                <p:growl id="messages" showDetail="true" escape="false" noOpener="false"/>
-                <p:schedule id="schedule" value="#{eventEntityBean.model}" widgetVar="myschedule" view="timeGridWeek" tooltip="true" resizable="true"
-                            disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true" urlTarget="false">
-                    <p:ajax event="dateSelect" listener="#{eventEntityBean.onDateSelect}" update="eventDetails"
-                            oncomplete="PF('eventDialog').show();"/>
-                    <p:ajax event="eventSelect" listener="#{eventEntityBean.onEventSelect}" update="eventDetails"
-                            oncomplete="PF('eventDialog').show();"/>
-                    <p:ajax event="eventMove" listener="#{eventEntityBean.onEventMove}" update="messages"/>
-                </p:schedule>
+                <h:form>
+                    <p:growl id="messages" showDetail="true" escape="false" noOpener="false"/>
+                    <p:schedule id="schedule" value="#{eventEntityBean.model}" widgetVar="myschedule"
+                                view="timeGridWeek" tooltip="true" resizable="true"
+                                disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true"
+                                urlTarget="false">
+                        <p:ajax event="dateSelect" listener="#{eventEntityBean.onDateSelect}" update="eventDetails"
+                                oncomplete="PF('eventDialog').show();"/>
+                        <p:ajax event="eventSelect" listener="#{eventEntityBean.onEventSelect}" update="eventDetails"
+                                oncomplete="PF('eventDialog').show();"/>
+                        <p:ajax event="eventMove" listener="#{eventEntityBean.onEventMove}" update="messages"/>
+                    </p:schedule>
 
-                <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
-                    <h:panelGrid id="eventDetails" columns="2" cellpadding="7">
-                        <p:outputLabel for="title" value="Titles" styleClass="font-bold"/>
-                        <p:inputText id="title" value="#{eventEntityBean.event.title}" required="true"/>
+                    <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
+                        <h:panelGrid id="eventDetails" columns="2" cellpadding="7">
+                            <p:outputLabel for="title" value="Titles" styleClass="font-bold"/>
+                            <p:inputText id="title" value="#{eventEntityBean.event.title}" required="true"/>
 
-                        <p:outputLabel for="from" value="From" styleClass="font-bold"/>
-                        <p:datePicker id="from" value="#{eventEntityBean.event.startDate}" pattern="yyyy/MM/dd" timeInput="true"
-                                      showTime="true" appendTo="@(body)"/>
+                            <p:outputLabel for="from" value="From" styleClass="font-bold"/>
+                            <p:datePicker id="from" value="#{eventEntityBean.event.startDate}" pattern="yyyy/MM/dd"
+                                          timeInput="true"
+                                          showTime="true" appendTo="@(body)"/>
 
-                        <p:outputLabel for="to" value="To" styleClass="font-bold"/>
-                        <p:datePicker id="to" value="#{eventEntityBean.event.endDate}" pattern="yyyy/MM/dd" timeInput="true"
-                                      showTime="true" appendTo="@(body)"/>
+                            <p:outputLabel for="to" value="To" styleClass="font-bold"/>
+                            <p:datePicker id="to" value="#{eventEntityBean.event.endDate}" pattern="yyyy/MM/dd"
+                                          timeInput="true"
+                                          showTime="true" appendTo="@(body)"/>
 
-                        <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
-                        <p:inputText id="email" value="#{eventEntityBean.email}"/>
+                            <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
+                            <p:inputText id="email" value="#{eventEntityBean.email}"/>
 
-                        <p:outputLabel for="client_name" value="First and last name" styleClass="font-bold"/>
-                        <p:inputText id="client_name" value="#{clientEventEntityBean.client_name}"/>
+                            <p:outputLabel for="client_name" value="First and last name" styleClass="font-bold"/>
+                            <p:inputText id="client_name" value="#{clientEventEntityBean.client_name}"/>
 
-                        <p:outputLabel for="url" value="URL" styleClass="font-bold"/>
-                        <p:inputText id="url" value="#{eventEntityBean.event.url}"/>
+                            <p:outputLabel for="url" value="URL" styleClass="font-bold"/>
+                            <p:inputText id="url" value="#{eventEntityBean.event.url}"/>
 
-                        <p:outputLabel for="description" value="Description" styleClass="font-bold"/>
-                        <p:inputTextarea id="description" value="#{eventEntityBean.event.description}" rows="3" cols="30"/>
+                            <p:outputLabel for="description" value="Description" styleClass="font-bold"/>
+                            <p:inputTextarea id="description" value="#{eventEntityBean.event.description}" rows="3"
+                                             cols="30"/>
 
-                        <p:outputLabel for="allDay" value="All Day" styleClass="font-bold"/>
-                        <h:selectBooleanCheckbox id="allDay" value="#{eventEntityBean.event.allDay}"/>
-                    </h:panelGrid>
+                            <p:outputLabel for="allDay" value="All Day" styleClass="font-bold"/>
+                            <h:selectBooleanCheckbox id="allDay" value="#{eventEntityBean.event.allDay}"/>
+                        </h:panelGrid>
 
-                    <div class="flex justify-content-between mt-3">
-                        <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
-                                         ignoreAutoUpdate="false"/>
-                        <p:commandButton id="addButton" value="Save" action="#{eventEntityBean.addEvent}"
-                                         oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
-                        <p:commandButton id="deleteBtn" type="delete" value="Delete" style="float: right; background-color: red;"
-                                         styleClass="font-bold ui-button-danger "
-                                         action="#{eventEntityBean.deleteEvent}"
-                                         oncomplete="PF('myschedule').update();P F('eventDialog').hide(); model.delete"/>
+                        <div class="flex justify-content-between mt-3">
+                            <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
+                                             ignoreAutoUpdate="false"/>
+                            <p:commandButton id="addButton" value="Save" action="#{eventEntityBean.addEvent}"
+                                             oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
+                            <p:commandButton id="deleteBtn" type="delete" value="Delete"
+                                             style="float: right; background-color: red;"
+                                             styleClass="font-bold ui-button-danger "
+                                             action="#{eventEntityBean.deleteEvent}"
+                                             oncomplete="PF('myschedule').update();P F('eventDialog').hide(); model.delete"/>
 
-                    </div>
-                </p:dialog>
-            </h:form>
+                        </div>
+                    </p:dialog>
+                </h:form>
             </div>
             <div class="col-md-3">
-            <h:form>
-                <h:panelGrid>
-                    <p:commandButton id="freeEventCreate" styleClass="ui-button ui-button-success" value="Schedule meetings" onclick="PF('freeTime').show()"/>
-                </h:panelGrid>
-                <p:dialog header="Time picker" widgetVar="freeTime" >
-                    <p:outputLabel for="dateFrom" value="From" styleClass="font-bold"/><br/>
-                    <p:datePicker id="dateFrom" value="#{eventEntityBean.time_from}" pattern="yyyy-MM-dd" required="true" timeInput="true"
-                                  showTime="true"/><br/>
+                <h:form>
+                    <h:panelGrid>
+                        <p:commandButton id="freeEventCreate" styleClass="ui-button ui-button-success"
+                                         value="Schedule meetings" onclick="PF('freeTime').show()"
+                                         style="position: fixed; bottom: 20px; right: 20px; z-index: 1000"/>
+                    </h:panelGrid>
+                    <p:dialog header="Time picker" widgetVar="freeTime">
+                        <p:outputLabel for="dateFrom" value="From" styleClass="font-bold"/><br/>
+                        <p:datePicker id="dateFrom" value="#{eventEntityBean.time_from}" pattern="yyyy-MM-dd"
+                                      required="true" timeInput="true"
+                                      showTime="true"/><br/>
 
-                    <p:outputLabel for="dateTo" value="To" styleClass="font-bold"/><br/>
-                    <p:datePicker id="dateTo" value="#{eventEntityBean.time_to}" pattern="yyyy-MM-dd" required="true" timeInput="true"
-                                  showTime="true"/><br/>
-                    <p:commandButton value="Send" action="#{eventEntityBean.setAvailableEvents}" oncomplete="PF('freeTime).hide()"/>
-                </p:dialog>
-            </h:form>
-        </div>
+                        <p:outputLabel for="dateTo" value="To" styleClass="font-bold"/><br/>
+                        <p:datePicker id="dateTo" value="#{eventEntityBean.time_to}" pattern="yyyy-MM-dd"
+                                      required="true" timeInput="true"
+                                      showTime="true"/><br/>
+                        <p:commandButton value="Send" action="#{eventEntityBean.setAvailableEvents}"
+                                         oncomplete="PF('freeTime).hide()"/>
+                    </p:dialog>
+                </h:form>
+            </div>
         </div>
     </h:body>
 </div>
